# bist-quant

./: .gitignore  AGENTS.md  BORSAPY_VS_BORSAMCP_REPORT.md  CONTRIBUTING.md  LICENSE  README.md  borsapy_indicators.py  mkdocs.yml  playwright.config.js  pyproject.toml  run_backtest.py
.claude/: settings.local.json
.githooks/: prepare-commit-msg
.github/workflows/: ci.yml  publish.yml
.streamlit/: config.toml
Models/: CLI_REFERENCE.md  README.md  build_factor_construction_cache.py  debug_backtester.py  portfolio_engine.py  test_usdtry_loading.py  validate_new_signals.py
Models/analytics/: analyze_seasonality.py
Models/common/: data_loader.py  utils.py
Models/configs/: adx.py  atr.py  breakout_value.py  currency_rotation.py  dividend_rotation.py  donchian.py  ema.py  five_factor_rotation.py  gold_fund_arbitrage.py  ichimoku.py  investment.py  macd.py  macro_hedge.py  momentum.py  obv.py  parabolic_sar.py  profitability.py  quality_momentum.py  quality_value.py  size_rotation.py  size_rotation_momentum.py  size_rotation_quality.py  sma.py  small_cap.py  small_cap_momentum.py  supertrend.py  trend_value.py  value.py  xu100.py
Models/signals/: adx_signals.py  atr_signals.py  borsapy_indicators.py  currency_rotation_signals.py  daily_seasonality.py  dividend_rotation_signals.py  ema_signals.py  factor_axes.py  factor_builders.py  five_factor_rotation_signals.py  ichimoku_signals.py  investment_signals.py  macd_signals.py  macro_hedge_signals.py  momentum_signals.py  monthly_seasonality.py  obv_signals.py  parabolic_sar_signals.py  profitability_signals.py  quality_value_signals.py  sector_rotation_signals.py  size_rotation_momentum_signals.py  size_rotation_quality_signals.py  size_rotation_signals.py  small_cap_momentum_signals.py  small_cap_signals.py  supertrend_signals.py  value_signals.py  weekly_seasonality.py
Regime Filter/: examples.py  macro_features.py  market_data.py  regime_macro_experiments.py  regime_models.py  run_api.py  run_full_pipeline.py  run_macro_experiments.py
Regime Filter/api/: main.py  scheduler.py
Regime Filter/docs/: README.md  SCRIPT_GUIDE.md
Regime Filter/models/: ensemble_regime.py  lstm_regime.py
app/: __init__.py  charts.py  layout.py  main.py  services.py  ui.py  utils.py
app/pages/: 10_Agents.py  1_Dashboard.py  2_Backtest.py  3_Factor_Lab.py  4_Signal_Construction.py  5_Screener.py  6_Analytics.py  7_Optimization.py  8_Professional.py  9_Compliance.py
bist-quant-ai/: .gitignore
data/: GGK_daily_prices.csv  bist_sector_classification.csv  bist_sector_classification.parquet  five_factor_axis_construction.parquet  fundamental_metrics.parquet  gold_arb_scenario_check.csv  gold_fund_arbitrage_report.json  gold_fund_latest_signals.csv  gold_fund_spread_zscores.parquet  gold_fund_tracking_quality.csv  gold_funds_daily_prices.csv  gold_funds_daily_prices.parquet  gold_funds_daily_prices_wide.csv  gold_funds_fetch_report.json  gold_funds_universe.csv  xau_try_2013_2026.csv  xu100_prices.csv  xu100_prices.parquet
data/Fetcher-Scrapper/: BORSAPY_STATUS.md  borsapy_client.py  fongetiri_gold_funds_fetcher.py  macro_events.py  realtime_api.py  realtime_stream.py  test_borsapy_integration.py  test_macro_events.py  test_realtime.py  update_prices.py
docs/: contributing.md  index.md
docs/api-reference/: analytics.md  common.md  core.md  signals.md
docs/design/: screening-extraction-phase0.md
docs/examples/: basic-backtest.md  custom-signals.md  portfolio-optimization.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/plans/: 2026-03-04-phase0-contract-freeze.md  2026-03-05-phase4-parity-review.md  2026-03-05-phase4-streamlit-parity-matrix.md  bist-quant-ui-enhancement-plan.md
docs/user-guide/: backtesting.md  multi-asset.md  portfolio.md  risk.md  signals.md
examples/: 01_basic_backtest.ipynb  02_custom_signals.ipynb  03_portfolio_optimization.ipynb
frontend/: README.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  vitest.config.ts
frontend/e2e/: critical-flows.spec.ts  navigation.spec.ts  ui-consistency.spec.ts
frontend/scripts/: check-ui-primitives.sh
scripts/: benchmarking_cli.py  classify_sectors.py  daily_data_refresh.sh  run_all_clients.py  run_all_fetchers.sh  run_fetch_pipeline.sh  setup-git-hooks.sh  start_next_stack.sh  start_next_stack_prod.sh  wait_and_consolidate.sh
scripts/contract/: check_openapi_snapshot.py  generate_phase0_contract_artifacts.py  verify_phase0_contract.py
scripts/midas_risk_metrics/: README.md  midas_pdf_parser.py  risk_report.py
scripts/regime/: regime_macro_experiments.py  run_evaluation.py  run_macro_experiments.py  tune_variants.py
scripts/release/: run_api_smoke.py  smoke_dual_stack.sh
server/: settings.py
server/api/: __init__.py  errors.py  main.py
server/engines/: __init__.py  errors.py  factor_lab.py  signal_construction.py  stock_filter.py  technical_scanner.py
server/jobs/: README.md  __init__.py  executor.py
server/observability/: README.md  logging.py  metrics.py  telemetry.py
server/persistence/: README.md  run_store.py
server/security/: README.md  auth.py  rate_limiter.py  sanitization.py
server/services/: README.md  __init__.py  core_service.py  system_service.py
src/: README.md
src/bist_quant/: README.md  __init__.py  _cli.py  (+3 more)
tasks/: todo.md
tests/: __init__.py  api_route_helpers.py  conftest.py  test_all_published_modules_import.py  test_borsapy_indicators.py  test_dashboard_api.py  test_dependency_strategy.py  test_derivatives_provider.py  test_docs_public_story.py  test_economic_calendar_provider.py  test_financials_api.py  test_fixed_income_provider.py  test_frontend_api_contracts.py  test_fx_enhanced_provider.py  test_job_manager_persistence.py  test_jobs_api.py  test_macro_calendar_api.py  test_package_boundary.py  test_phase4_api.py  test_public_api_surface.py  test_quickstart_runtime.py  test_runtime_defaults.py  test_screener_api.py  test_sdist_contents.py  test_signals_batch.py  test_streaming_provider.py  test_version_coherence.py
(+464 files in other folders)
