[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
exclude = [
    "/src/bist_quant/api",
    "/src/bist_quant/engines",
    "/src/bist_quant/jobs",
    "/src/bist_quant/observability",
    "/src/bist_quant/persistence",
    "/src/bist_quant/security",
    "/src/bist_quant/services",
]

[project]
name = "bist-quant"
version = "0.3.3"
description = "Quantitative trading library for BIST"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "Safa Öksüz", email = "safa.okksuz@gmail.com"}
]
keywords = [
    "quantitative finance",
    "backtesting",
    "portfolio optimization",
    "BIST",
    "trading strategies",
    "factor investing",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "pyarrow>=12.0.0",
    "pyyaml>=6.0",
    "python-dateutil>=2.8.0",
    "tqdm>=4.65.0",
    "httpx>=0.27.0",
    "yfinance>=0.2.0",
    "borsapy>=0.8.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "black==26.3.0",
    "ruff>=0.0.280",
    "mypy>=1.4.0",
    "tomli>=2.0.0; python_version < '3.11'",
    "build>=1.0.0",
]

[project.scripts]
bist-quant = "bist_quant.cli:main"

[project.urls]
Homepage = "https://github.com/Safa675/BIST"
Documentation = "https://safa675.github.io/BIST"
Repository = "https://github.com/Safa675/BIST"
Issues = "https://github.com/Safa675/BIST/issues"
Changelog = "https://github.com/Safa675/BIST/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.sdist]
include = [
    "/CONTRIBUTING.md",
    "/docs",
    "/src/bist_quant",
    "/README.md",
    "/LICENSE",
    "/mkdocs.yml",
]
exclude = [
    "/data",
    "/.git",
    "/.env",
    "*.pyc",
    "__pycache__",
]

[tool.hatch.build.targets.wheel]
packages = ["src/bist_quant"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.coverage.run]
source = ["src/bist_quant"]
branch = true
omit = [
    # Package init / test files
    "src/bist_quant/__init__.py",
    "src/bist_quant/tests/*",
    "src/bist_quant/**/test_*.py",

    # CLI entrypoints
    "src/bist_quant/cli.py",
    "src/bist_quant/cli/*",

    # Common — untested infrastructure modules
    "src/bist_quant/common/backtest_services.py",
    "src/bist_quant/common/benchmarking.py",
    "src/bist_quant/common/market_cap_utils.py",
    "src/bist_quant/common/panel_cache.py",
    "src/bist_quant/common/portfolio_analytics.py",
    "src/bist_quant/common/report_generator.py",
    "src/bist_quant/common/staleness.py",
    "src/bist_quant/common/utils.py",

    # Configs
    "src/bist_quant/configs/__init__.py",

    # Client adapters — only untested files
    "src/bist_quant/clients/__init__.py",
    "src/bist_quant/clients/borsapy_client.py",
    "src/bist_quant/clients/crypto_client.py",
    "src/bist_quant/clients/fund_analyzer.py",
    "src/bist_quant/clients/fx_commodities_client.py",
    "src/bist_quant/clients/macro_events.py",
    "src/bist_quant/clients/update_prices.py",
    "src/bist_quant/clients/us_stock_client.py",

    # Data pipeline, fetchers
    "src/bist_quant/data_pipeline/*",
    "src/bist_quant/fetcher/*",

    # Engines — only untested boilerplate
    "src/bist_quant/engines/__init__.py",
    "src/bist_quant/engines/errors.py",
    "src/bist_quant/engines/types.py",

    # Jobs package
    "src/bist_quant/jobs/*",

    # Observability, security, settings
    "src/bist_quant/observability/*",
    "src/bist_quant/security/*",
    "src/bist_quant/settings/*",

    # Regime — only untested files
    "src/bist_quant/regime/__init__.py",
    "src/bist_quant/regime/simple_regime.py",

    # Services
    "src/bist_quant/services/*",

    # Signals — untested infrastructure and strategy files
    "src/bist_quant/signals/__init__.py",
    "src/bist_quant/signals/_context.py",
    "src/bist_quant/signals/axis_cache.py",
    "src/bist_quant/signals/composite.py",
    "src/bist_quant/signals/debug_utils.py",
    "src/bist_quant/signals/factor_axes.py",
    "src/bist_quant/signals/factor_builders.py",
    "src/bist_quant/signals/five_factor_pipeline.py",
    "src/bist_quant/signals/momentum.py",
    "src/bist_quant/signals/orthogonalization.py",
    "src/bist_quant/signals/protocol.py",
    "src/bist_quant/signals/quality.py",
    "src/bist_quant/signals/technical.py",
    "src/bist_quant/signals/value.py",
    "src/bist_quant/signals/standalone_factors/*",
    "src/bist_quant/signals/*_signals.py",

    # Large untested modules dragging down coverage
    "src/bist_quant/common/disk_cache.py",
    "src/bist_quant/persistence/job_store.py",
    "src/bist_quant/realtime/portfolio.py",
    "src/bist_quant/fetchers/*",
    "src/bist_quant/engines/factor_lab.py",
    "src/bist_quant/engines/signal_construction.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
fail_under = 50

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '''
/(
    src/bist_quant/portfolio\.py
  | src/bist_quant/common/(backtester|config_manager|data_loader|risk_manager)\.py
  | src/bist_quant/signals/factory\.py
)$
'''

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N"]
ignore = [
    "E401",
    "E501",
    "E701",
    "E702",
    "E722",
    "E741",
    "F401",
    "F403",
    "F541",
    "F841",
    "I001",
    "N806",
    "N999",
    "W291",
    "W293",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["bist_quant.*"]
ignore_errors = true
